--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+// 针对基于WebKit的浏览器引擎（如Chrome、Safari等）的。
+.scrollbar-hide::-webkit-scrollbar{  
+  display:none
+}
+
+// 针对基于Gecko的浏览器引擎（如Firefox）的。
+
+.scrollbar-hide{   
+  scrollbar-width:none
+}
